--- a/src/EnumDisplayName/EnumDisplayName.csproj
+++ b/src/EnumDisplayName/EnumDisplayName.csproj
@@ -19,7 +19,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Enable.Common.Argument" Version="2.0.0" />
+    <PackageReference Include="Enable.Common.Argument" Version="2.1.0-main.1" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.0.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
